<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:titlebar="http://schemas.android.com/apk/res-auto"
    xmlns:onclickbackgroud="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".ActivityLogin" 
    android:id="@+id/activity_login"
    android:background="@drawable/bg_activity">

    <com.leading.baselibrary.ui.TitleBarLayout
        android:id="@+id/login_tbl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="0dip"
        android:paddingRight="0dip"
        android:paddingTop="0dip"
        titlebar:TextView_Name="@string/app_name" >
    </com.leading.baselibrary.ui.TitleBarLayout>

    <TableRow android:layout_width="fill_parent" 
        android:id="@+id/login_tr_username"
        android:layout_height="45dip"
        android:layout_below="@id/login_tbl"
        android:layout_centerHorizontal="true"
        android:background="@drawable/setting_shape_top"
         android:layout_marginTop="61dp"
         android:layout_marginLeft="12dip"
         android:layout_marginRight="12dip">
	  	<TextView
	  	    android:paddingLeft="8dip"
	            android:id="@+id/login_txt_username"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical"
	            android:text="@string/login_txt_username"/>
	    <EditText
	        android:id="@+id/login_edt_username"
	        android:layout_width="185dip"
	        android:layout_marginLeft="20dip"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:maxLines="1"
	        android:maxLength="18"
	        android:inputType="text"
	        android:background="@drawable/edittext_style"
	        android:ems="10" >
    </EditText>
	</TableRow>
	<TableRow android:layout_width="fill_parent" 
	    android:id="@+id/login_tr_password"
        android:layout_height="45dip"
        android:layout_below="@id/login_tr_username"
        android:layout_centerHorizontal="true"
        android:background="@drawable/setting_shape_center_white"
        android:layout_marginLeft="12dip"
        android:layout_marginRight="12dip">
	  	<TextView
	  	    	android:id="@+id/login_txt_password"
	  	    	android:paddingLeft="8dip"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical"
	            android:text="@string/login_txt_password"/>
	    <EditText
	        android:id="@+id/login_edt_password"
	        android:layout_width="185dip"
	        android:layout_marginLeft="20dip"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:inputType="textPassword"
	        android:maxLines="1"
	        android:maxLength="18"
	        android:background="@drawable/edittext_style"
	        android:ems="10" >
    </EditText>
	</TableRow>
	<TableRow android:layout_width="fill_parent" 
	    android:id="@+id/login_tr_address"
        android:layout_height="45dip"
        android:layout_below="@id/login_tr_password"
        android:layout_centerHorizontal="true"
        android:background="@drawable/setting_shape_buttom_white"
        android:layout_marginLeft="12dip"
        android:layout_marginRight="12dip">
	  	<TextView
	  	    android:paddingLeft="8dip"
	            android:id="@+id/login_txt_serverAddress"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical"
	            android:text="@string/login_txt_serverAddress"/>
	    <EditText
	        android:id="@+id/login_edit_serverAddress"
	        android:layout_width="185dip"
	        android:layout_marginLeft="20dip"
	        android:layout_height="wrap_content"
	        android:inputType="textUri"
	        android:layout_gravity="center_vertical"
	        android:maxLines="1"
	        android:maxLength="18"
	        android:text="168.168.12.18:8001"
	        android:background="@drawable/edittext_style"
	        android:ems="10" >
    </EditText>
	</TableRow>
	<Button
	    android:id="@+id/login_btn"
	    android:layout_below="@id/login_tr_address"
	    android:layout_centerHorizontal="true"
	    android:layout_width="match_parent"
	    android:layout_height="35dip"
	    android:layout_alignLeft="@+id/login_tr_address"
	    android:layout_alignRight="@+id/login_tr_address"
	    android:layout_alignTop="@+id/login_tr_address"
	    android:layout_marginTop="120dip"
	    android:layout_centerVertical="true"
	    android:layout_marginLeft="6dp"
	    android:layout_marginRight="6dp"
	    android:background="@drawable/btn_bg"
	    android:focusable="true"
	    android:text="@string/login_btn"
	    android:textColor="#FFFAFA" />
	<CheckBox
	    android:id="@+id/login_chk_AutoLogin" 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@id/login_btn"
	    android:layout_below="@id/login_btn"
	    android:layout_marginLeft="21dp"
	    android:layout_marginTop="20dp"
	    android:text="@string/login_chk_AutoLogin" />

	<CheckBox
	    android:id="@+id/login_chk_RemenberPwd" 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="20dp"
	    android:layout_alignBaseline="@+id/login_chk_AutoLogin"
	    android:layout_alignBottom="@id/login_chk_AutoLogin"
	    android:layout_alignRight="@id/login_btn"
	    android:layout_marginRight="18dp"
	    android:text="@string/login_chk_RemenberPassword" />

</RelativeLayout>